TAG: lib_java_core-4-1-1-1
DATE: 7/14/2008
STAFF: marka
CHANGES: merge tr9088 to trunk

TAG: lib_java_core-tr8079-BP
DATE: 05/14/2008
STAFF: jsb
CHANGES: branch point for tr8079 (phenoview)

TAG: lib_java_core-4-0-0-1
DATE: 12/24/2007
STAFF: pf
CHANGES: merging tr8087 branch to trunk

TAG: lib_java_core-tr8087-(BP,1)
DATE: 9/15/2007 (latest)
STAFF: pf
CHANGES: branch and branch point tags for MGI 4.0 release

TAG: lib_java_core-3-5-1-5
DATE: 02/02/2007
STAFF: lec
CHANGES: 
1) TR8068 merge

TAG: lib_java_core-3-5-1-4
DATE: 12/22/2006
STAFF: lec
CHANGES: 
1) bourne shell parse fix

TAG: lib_java_core-tr8068-2
DATE: 02/02/2007
STAFF: lec
CHANGES: 
1) TR8068 (html formatting)

TAG: lib_java_core-tr8068-1
DATE: 12/21/2006
STAFF: lec
CHANGES: 
1) TR8068 (html formatting)

TAG: lib_java_core-BP-tr8068
DATE: 12/21/2006
STAFF: lec
CHANGES: 
1) branch point tag for TR8068 (html formatting)

TAG: lib_java_core-3-5-1-3
DATE: 12/05/2006
STAFF: lec
CHANGES: 
1) shr/ioutils/OutputDataFile.java

TAG: lib_java_core-3-5-1-2
DATE: 10/23/2006
STAFF: lec
CHANGES: merge tr7894 branch

TAG: lib_java_core-tr7894-1
DATE: 10/10/2006
STAFF: lec
CHANGES: TR7943; has to go out with TR7894

TAG: lib_java_core-BP-tr7894
DATE: 10/10/2006
STAFF: lec
CHANGES: branch point for TR7943; has to go out with TR7894

TAG: lib_java_core-3-5-1-1
DATE: 09/06/2006
STAFF: sc
CHANGES: merge build36 branch to trunK

TAG: lib_java_core-build36-1
DATE: 8/16/2006
STAFF: sc
CHANGES: SchemaConstants - added SNPBE

TAG: lib_java_core-build36-BP
DATE: 8/3/2006
STAFF: sc
CHANGES: MGI3.51 (build36) branch point tag

TAG: lib_java_core-3-5-0-2
DATE: 5/2/2006
STAFF: dbm
CHANGES:
1) Merge configuration changes from tr6549 branch

TAG: lib_java_core-3-5-0-1
DATE: 4/27/2006
STAFF: sc
CHANGES:
1) mergetr7067 to trunk

TAG: lib_java_core-3-4-4-1
DATE: 4/6/2006
STAFF: sc
CHANGES: merge tr7379 branch to trunk

TAG:lib_java_core-tr6594-2
DATE: 3/27/2006
STAFF: dbm
CHANGES: Consolidate build scripts

TAG:lib_java_core-tr6594-1