@@ -1,7 +1,18 @@
+TAG: lib_java_core-4-1-2-0
+DATE: 08/06/2008
+STAFF: jsb
+CHANGES: merge tr8079 to trunk (phenoview)
+
 TAG: lib_java_core-4-1-1-1
 DATE: 7/14/2008
 STAFF: marka
 CHANGES: merge tr9088 to trunk
+
+TAG: lib_java_core-tr8079-1
+DATE: 05/14/2008
+STAFF: jsb
+CHANGES: 
+1) added guarantee() method to ExpiringObjectCache.java
 
 TAG: lib_java_core-tr8079-BP
 DATE: 05/14/2008
